finish Motivation Meme Project with new images and updated HTML/CSS for improved layout and styling

--- a/6.4 Motivation Meme Project/index.html
+++ b/6.4 Motivation Meme Project/index.html
@@ -16,17 +16,21 @@ But it must have the following features:
 -->
 <!DOCTYPE html>
 <html>
-<head>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-<title>Title of the document</title>
-</head>
-<body>
-<p>
-The content of the document......
-</p>
-<h1>test</h1>
-</body>
+  <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <title>Title of the document</title>
+  </head>
+  <body style="background-color: black">
+    <div class="box">
+      <img src="./assets/images/bird.jpeg" alt="bird" />
+      <h1>That special moment</h1>
+      <p style="text-align: center;">When you find the perfect avocado at the supermarket</p>
+    </div>
+  </body>
 </html>
